--- a/.github/workflows/update_iptv.yml
+++ b/.github/workflows/update_iptv.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
+        pip list  # 显示已安装的包
     
     - name: Fetch IPTV Channels
       run: |
@@ -30,6 +31,7 @@ jobs:
 import requests
 from bs4 import BeautifulSoup
 import traceback
+import sys
 
 def fetch_and_parse_website():
     url = "http://epg.51zmt.top:8000/sctvmulticast.html"
@@ -39,7 +41,11 @@ def fetch_and_parse_website():
         headers = {
             'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'
         }
-        response = requests.get(url, headers=headers, timeout=10)
+        response = requests.get(url, headers=headers, timeout=30)  # 增加超时时间
+        
+        # 检查响应状态
+        print(f"响应状态码: {response.status_code}")
+        print(f"响应编码: {response.encoding}")
         
         # 使用网页声明的 UTF-8 编码
         response.encoding = 'utf-8'
@@ -51,7 +57,7 @@ def fetch_and_parse_website():
         tables = soup.find_all('table')
         if not tables:
             print("未找到表格")
-            return
+            return False
         
         first_table = tables[0]
         rows = first_table.find_all('tr')
@@ -88,12 +94,15 @@ def fetch_and_parse_website():
             f.write('\n'.join(m3u8_lines))
         
         print(f"成功生成 M3U8 文件，共 {len(m3u8_lines)//2 - 1} 个频道")
+        return True
     
     except Exception as e:
         print("处理网页时发生错误:")
         print(traceback.format_exc())
+        return False
 
-fetch_and_parse_website()
+# 设置返回码
+sys.exit(0 if fetch_and_parse_website() else 1)
 EOF
     
     - name: Commit and push changes
