--- a/.github/workflows/update_iptv.yml
+++ b/.github/workflows/update_iptv.yml
@@ -23,11 +23,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
-        pip list  # 显示已安装的包
+        pip list
     
     - name: Fetch IPTV Channels
       run: |
-        python << EOF
+        python << 'EOF'
 import requests
 from bs4 import BeautifulSoup
 import traceback
