--- a/.github/workflows/update_iptv.yml
+++ b/.github/workflows/update_iptv.yml
@@ -1,9 +1,8 @@
-name: Update IPTV Channels
+name: Update IPTV List
 
 on:
   schedule:
-    # 每天凌晨2点运行（UTC时间）
-    - cron: '0 18 * * *'
+    - cron: '0 */12 * * *'  # 每12小时运行一次
   workflow_dispatch:  # 允许手动触发
 
 jobs:
@@ -12,26 +11,39 @@ jobs:
     
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
-    
+      uses: actions/checkout@v4
+      
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
-    
+        python-version: '3.x'
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
-        pip list
-    
-    - name: Fetch IPTV Channels
-      run: python .github/workflows/update_iptv.py
-    
-    - name: Commit and push changes
+        
+    - name: Show working directory
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        pwd
+        ls -la
+        
+    - name: Run update script
+      run: python .github/workflows/update_iptv.py
+        
+    - name: Check file status
+      run: |
+        ls -la iptv2.m3u8 || echo "File not found"
+        if [ -f iptv2.m3u8 ]; then
+          echo "File content preview:"
+          head -n 5 iptv2.m3u8
+        fi
+        
+    - name: Commit and push if changed
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         git add iptv2.m3u8
-        git commit -m "Update IPTV channels $(date +'%Y-%m-%d')" || exit 0
-        git push
+        git status
+        git diff --staged
+        git diff --quiet && git diff --staged --quiet || (git commit -m "自动更新IPTV列表" && git push)
